Update .env.dev SENDGRID_API_KEY

--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,2 @@
-SENDGRID_API_KEY=tu-api-key-de-sendgrid
+SENDGRID_API_KEY=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
 SENDGRID_PORT=5000
